--- a/demo.html
+++ b/demo.html
@@ -311,10 +311,13 @@
                         layout.run();
                     }
                 });
-
+                
+                var lassoSelectColor = "#d67614";
+                var lassoLineWidth = 3;
+                document.getElementById('colorInpSec').value = "#d67614";
                 document.getElementById("lassoTool").addEventListener("click", function () {
                     //document.getElementById("cy").style.cursor ="crosshair";
-                    api.enableLassoMode();
+                    api.enableLassoMode({lineColour:lassoSelectColor,lineWidth:lassoLineWidth});
                     if( document.getElementById('layout').checked){
                         layout.run();
                     }
@@ -344,6 +347,7 @@
                     changeBorder(nodesWithHiddenNeighbor);
                     */
                     api.disableMarqueeZoom();
+                    api.disableLassoMode();
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
@@ -412,6 +416,14 @@
                   document.getElementById('colorInp').value = e.target.value;
                 });
 
+                document.getElementById('colorInpSec').addEventListener('change', function(e) {
+                  lassoSelectColor = document.getElementById('colorInpSec').value;
+                });
+                document.getElementById("lineWidth").addEventListener('change', function(e) {
+                  lassoLineWidth = document.getElementById("lineWidth").value;
+                });
+                
+
                 addHighlightColorOptions();
                 var s =  api.getHighlightStyles()[0];
                 if (s) {
@@ -473,7 +485,13 @@
             <br/>
             <span style="font-weight: normal !important; font-size: 14px !important;">Shift + drag to specify region; gets disabled after zoom, mouse events on canvas and other api functions calls</span>
             <br/><br/>
-            <b id="lassoTool" style="cursor: pointer; color: brown">Lasso Tool</b><br/><br/>
+            <b id="lassoTool" style="cursor: pointer; color: brown">Lasso Tool</b>
+            <br/>
+            <span style="font-weight: normal !important; font-size: 14px !important;">Left click to start specifying region; left click again to complete the region</span>
+            <br/><br/>
+            <input type="color" id="colorInpSec"><br/>
+            <label for="quantity">Line Width (between 1 and 10):</label>
+            <input type="number" id="lineWidth" min="1" max="10"><br/><br/>
             <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
             <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked">
             <br/><br/>
