--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -355,9 +355,9 @@
                     }
                 });
 
-                api.changeLassoStyle({lineColor: "#d67614",lineWidth: 3});
+                var lassoSelectColor = "#d67614";
+                var lassoLineWidth = 3;
                 document.getElementById('colorInpSec').value = "#d67614";
-                document.getElementById('lineWidth').value = 3;
 
                 document.getElementById("lassoTool").addEventListener("click", function () {
                   getButtonsToDef();
@@ -365,7 +365,7 @@
                   var callbackFunc = function() {
                     document.getElementById("lassoTool").style.backgroundColor = "#11ffee00";
                   }; 
-                    api.enableLassoMode(callbackFunc);
+                    api.enableLassoMode({callback:callbackFunc,lineColour:lassoSelectColor,lineWidth:lassoLineWidth});
                     if( document.getElementById('layout').checked){
                         layout.run();
                     }
@@ -443,10 +443,10 @@
                 });
 
                 document.getElementById('colorInpSec').addEventListener('change', function(e) {
-                  api.changeLassoStyle({lineColor:document.getElementById('colorInpSec').value});
+                  lassoSelectColor = document.getElementById('colorInpSec').value;
                 });
                 document.getElementById("lineWidth").addEventListener('change', function(e) {
-                  api.changeLassoStyle({lineWidth:document.getElementById("lineWidth").value});
+                  lassoLineWidth = document.getElementById("lineWidth").value;
                 });
 
                 document.getElementById('colorChangerBtn').addEventListener('click', function () {
