--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -265,6 +265,9 @@
                 //In below functions, finding the nodes to hide/show are sample specific.
                 //If the sample graph changes, those calculations may also need a change.
                 document.getElementById("hide").addEventListener("click", function () {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var actions = [];
                     var nodesToHide = cy.$(":selected").add(cy.$(":selected").nodes().descendants());
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes().intersection(nodesToHide);
@@ -280,6 +283,9 @@
                 });
                 
                 document.getElementById("showAll").addEventListener("click", function () {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var actions = [];
                     var nodesWithHiddenNeighbor = cy.nodes("[thickBorder]");
                     actions.push({name: "thinBorder", param: nodesWithHiddenNeighbor});
@@ -302,6 +308,9 @@
                     nodesWithHiddenNeighbor = hiddenEles.nodes().edgesWith(cy.nodes(":hidden").difference(hiddenEles.nodes()))
                         .connectedNodes().intersection(hiddenEles.nodes());
                     actions.push({name: "thickenBorder", param: nodesWithHiddenNeighbor});*/
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var hiddenEles = cy.$(":selected").neighborhood().filter(':hidden');
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = (hiddenEles.neighborhood(":visible").nodes("[thickBorder]"))
@@ -350,6 +359,7 @@
                 document.getElementById('lineWidth').value = 3;
 
                 document.getElementById("lassoTool").addEventListener("click", function () {
+                  api.disableMarqueeZoom();
                   getButtonsToDef();
                   document.getElementById("lassoTool").style.backgroundColor = "darkgray";
                   var callbackFunc = function() {
@@ -377,6 +387,9 @@
                 });
                 
                 cy.on('doubleTap', 'node', function (event) {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var hiddenEles = cy.$(":selected").neighborhood().filter(':hidden');
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = (hiddenEles.neighborhood(":visible").nodes("[thickBorder]")).difference(cy.edges(":hidden").difference(hiddenEles.edges().union(hiddenEles.nodes().connectedEdges())).connectedNodes());
