--- a/demo.html
+++ b/demo.html
@@ -259,6 +259,9 @@
                   document.getElementById("lassoTool").style.backgroundColor = "#11ffee00";
                 }
                 document.getElementById("hide").addEventListener("click", function () {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
                     api.hide(cy.$(":selected"));
@@ -270,6 +273,9 @@
                 });
                 
                 document.getElementById("showAll").addEventListener("click", function () {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
                     api.show(cy.elements());
@@ -279,6 +285,9 @@
                 });
 
                 document.getElementById("showHiddenNeighbors").addEventListener("click", function () {
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
@@ -320,6 +329,7 @@
                 document.getElementById('lineWidth').value = 3;
 
                 document.getElementById("lassoTool").addEventListener("click", function () {
+                  api.disableMarqueeZoom();
                   getButtonsToDef();
                   document.getElementById("lassoTool").style.backgroundColor = "darkgray";
                   var callbackFunc = function() {
@@ -354,6 +364,9 @@
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     changeBorder(nodesWithHiddenNeighbor);
                     */
+                    api.disableMarqueeZoom();
+                    api.disableLassoMode();
+                    getButtonsToDef();
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
