--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,8 @@
         <script src="https://unpkg.com/layout-base/layout-base.js"></script>
         <script src="https://unpkg.com/cose-base/cose-base.js"></script>
         <script src="https://unpkg.com/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js"></script>
+        <script src="https://unpkg.com/geometric@2.2.3/build/geometric.min.js"></script>
+        
         <script src="cytoscape-view-utilities.js"></script>
 
         <style>
