Extend taphold selection to edges
 - This is a breaking change. `Neighbor` function, as defined in the
 extension options, needs to now be defined as a function of `ele` for
 element, nodes and edges, instead of just nodes.

 - Functionality added in response to a suggestion in iVis-at-Bilkent/newt#628

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -225,8 +225,13 @@
                   setVisibilityOnHide: false, // whether to set visibility on hide/show
                   setDisplayOnHide: true, // whether to set display on hide/show
                   zoomAnimationDuration: 1500, //default duration for zoom animation speed
-                  neighbor: function(node){
-                      return node.closedNeighborhood();
+                  neighbor: function(ele){
+                      if (ele.isNode()) {
+                          return ele.closedNeighborhood();
+                      }
+                      else if (ele.isEdge()) {
+                          return ele.source().closedNeighborhood().union(ele.target().closedNeighborhood());
+                      }
                   },
                   neighborSelectTime: 1000
                 });
